wrap search bar, fix transition

--- a/views/styles.sass
+++ b/views/styles.sass
@@ -3,6 +3,8 @@ $primary-color: #333333
 
 $header-height: 30px
 $footer-height: 15vh
+$lr-margin: 10px
+$sb-height: 35px
 
 =border-radius($radius)
   -webkit-border-radius: $radius
@@ -47,6 +49,14 @@ div.content
     text-align: center
     vertical-align: middle
 
+    .top
+      box-sizing: border-box
+      height: $sb-height
+      width: 100%
+      text-align: left
+      padding: 0 $lr-margin
+      margin: 0 0 1.5em
+
     .category-viewer-placeholder
       $cat-viewer-height: 40vh
       $cat-viewer-ph-height: 50vh
@@ -88,22 +98,19 @@ div.category
     background: rgba(50, 50, 50, 0.75)
 
 div.search
-  $sb-height: 35px
-  $lr-margin: 10px
-  $lo-color: rgba(255, 255, 255, 0.5)
+  $lo-color: rgba(255, 255, 255, 0.65)
   $hi-color: rgba(255, 255, 255, 0.85)
-  height: $sb-height
-  width: 100%
+  height: 100%
+  width: 50%
   max-width: 700px
   display: inline-block
-  margin: 0 $lr-margin 1.5em
   text-align: left
   background: $lo-color
+
   &.search-focused
     outline: none
     background: $hi-color
-    width: calc(100% - #{$sb-height} - 2*#{$lr-margin})
-    transform: translateY(-3px)
+    width: 100%
     -webkit-box-shadow: 5px 4px 5px -1px rgba(0,0,0,0.5)
     -moz-box-shadow: 5px 4px 5px -1px rgba(0,0,0,0.5)
     box-shadow: 5px 4px 5px -1px rgba(0,0,0,0.5)
@@ -126,14 +133,13 @@ div.search
     box-sizing: border-box
     display: inline-block
     height: 100%
-    width: 200px
+    width: calc(100% - #{$sb-height})
     border: none
     background: transparent
     font-size: 1em
     font-style: italic
     padding: 5px 10px
     color: #4d4d4d
-    transition: width 0.3s, transform 0.3s
 
 
 div.shortcut-bar-wrapper
